update build environment